Fix issue with testing multi module projects
    Fixes #18796
    Fixes #18795